--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1216,7 +1216,13 @@
     "\n",
     "Well, imagine a TV quiz show, two teams of four members each participate in this quiz show and the questions are divided into four categories: history, art, science and sports. In each team there is an expert in each category whom we call a weak learner, because he knows his subject very well but knows little about the rest of the categories. Each member of each team would get a very high score in the category in which he is an expert but very low score in the rest. But adding the scores of all the members, the total score of the team would be quite good. This would make the team as a whole a strong learner. And that's how an ensemble method works.\n",
     "\n",
-    "The particularity of AdaBoost is that it iteratively tries to learn from the data it analyzes, improving the results in each iteration."
+    "The particularity of AdaBoost is that it iteratively tries to learn from the data it analyzes, improving the results in each iteration.\n",
+    "\n",
+    "In machine learning terms, weak learners would be classification algorithms that performs poorly, but performs better than a random guessing. In our case, the weak learner is the decision tree algorithm. In each iteration, the weak learner is trained with a subset of the data and AdaBoost gives a weight to each observation, this weight is greater if the observation has been misclassified. The more weight an observation has, the more likely it is to be included in the set for the next iteration and hopefully the next classifier trained will perform better on them. The process  continues to add learners until a limit is reached in the number of models or accuracy.\n",
+    "\n",
+    "**References**\n",
+    "\n",
+    "http://mccormickml.com/2013/12/13/adaboost-tutorial/"
    ]
   },
   {
